# whisper

./: .dockerignore  .flake8  .gitignore  DOCKERFILE  Dockerfile  LICENCE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml  image.yml
app/: main.py
app/config/: env.py  environment.py
app/core/: transcriptor.py  whisper.py
app/utils/: audio.py  files.py  formatters.py  whisper.py
