[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper"
version = "0.1.0"
authors = [
    {name="Nassh",email="nacifyas@gmail.com"}
]
description = "FastAPI powered backend for Automatic Speech Recognition using Openai Whisper library"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENCE"}
dependencies = [
    "uvicorn",
    "openai-whisper==20230314",
    "fastapi[all]<=0.98",
    "aiofiles==23.1.0"
]


[tool.setuptools]
py-modules = ["app"]

[project.optional-dependencies]
dev = [
    "mypy",
    "flake8"
]
